# specdriven-qa

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
apps/: .gitkeep
automation/: conftest.py
automation/config/: capabilities.py
automation/locators/: login-locators.py
automation/tests/: test-login.py
automation/utils/: driver-factory.py  wait-utils.py
config/: README.md  apps.yaml  emulators.yaml  integrations.yaml  pytest_configs.json
docs/: ai-workflows.md  arquitecture.md  navigation-flows.md  project-overview.md  qa-strategy.md  risk-analysis.md  test-scope.md
docs/00-overview/: automation-plan.md  setup-guide.md
docs/00-overview/spec/: design.md  tasks.md
docs/01-sdd-guide/: 00-table-of-contents.md  phase-0-app-analysis.md  phase-1-test-planning.md  phase-2-test-case-design.md  phase-3-test-library-management.md  phase-4-automation-framework.md  phase-5-test-automation.md  phase-6-execution-reporting.md  phase-7-maintenance-cicd.md
docs/02-process-journal/: process-journal.md
docs/03-extensibility/: ios-support.md  jira-zephyr-integration.md  real-devices.md
docs/standards/: field-requirements.md  quality-checklist.md
examples/: debugging-examples.md  generated-documentation.md  prompt-examples.md  xml-analysis.md
framework/: __init__.py
framework/core/: __init__.py  config_loader.py  emulator_manager.py
framework/integrations/: __init__.py  jira_connector.py  zephyr_reporter.py
framework/pages/: __init__.py  base_page.py  cart_page.py  checkout_complete_page.py  checkout_info_page.py  checkout_overview_page.py  locators.py  login_page.py  product_detail_page.py  products_page.py
framework/reporting/: __init__.py  html_report.py
framework/utils/: __init__.py  constants.py  coverage_analyzer.py  logger_factory.py  markers.py
scripts/: run_tests.sh  setup.sh
test_library/: coverage_analysis.md  template.md
test_library/cart/: TC_CART_001.md  TC_CART_002.md  TC_CART_003.md  TC_CART_004.md  TC_CART_005.md  TC_CART_006.md
test_library/catalog/: TC_CATALOG_001.md  TC_CATALOG_002.md  TC_CATALOG_003.md  TC_CATALOG_004.md  TC_CATALOG_005.md  TC_CATALOG_006.md
test_library/checkout/: TC_CHECKOUT_001.md  TC_CHECKOUT_002.md  TC_CHECKOUT_003.md  TC_CHECKOUT_004.md  TC_CHECKOUT_005.md  TC_CHECKOUT_006.md
test_library/login/: TC_LOGIN_001.md  TC_LOGIN_002.md  TC_LOGIN_003.md  TC_LOGIN_004.md  TC_LOGIN_005.md
tests/: conftest.py
tests/check_scripts/: __init__.py  check_T001_login_valid_credentials.py  check_T002_login_invalid_credentials.py  check_T003_login_empty_fields.py  check_T004_catalog_browsing.py  check_T005_add_product_to_cart.py  check_T006_product_detail_view.py  check_T007_remove_from_cart.py  check_T008_sort_products_az.py  check_T009_sort_products_price.py  check_T010_complete_checkout.py  check_T011_checkout_cancel.py  check_T012_continue_shopping.py  check_T013_checkout_missing_info.py
tests/flows/: __init__.py  cart_flow.py  checkout_flow.py  login_flow.py
tests/integration/: __init__.py
tests/smoke/: __init__.py
tests/unit/: __init__.py  test_base_page.py  test_case_parser.py  test_config_loader.py  test_coverage_analyzer.py  test_flows_validation.py  test_markers.py  test_naming_validator.py  test_report_generator.py
(+1 files in other folders)
