# =============================================================================
# Demo_QA — Project Configuration
# =============================================================================
# Modern Python project configuration using pyproject.toml.
# This file configures tools (ruff, mypy, pytest) and defines project metadata.
# =============================================================================

[project]
name = "demo-qa"
version = "1.0.0"
description = "QA Training Showroom — SDD process applied to mobile test automation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "Appium-Python-Client==3.1.0",
    "pytest==7.4.0",
    "PyYAML==6.0.1",
    "hypothesis==6.92.0",
    "Jinja2==3.1.2",
    "selenium==4.15.2",
]

[project.optional-dependencies]
dev = [
    "ruff==0.4.4",
    "mypy==1.10.0",
    "pre-commit==3.7.1",
    "pytest-cov==5.0.0",
]

# =============================================================================
# Ruff — Linter and Formatter
# =============================================================================

[tool.ruff]
target-version = "py38"
line-length = 120
src = ["framework", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (readability preference)
    "RUF012", # mutable class variables (needed for page objects)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # allow assert in tests
    "B011",   # allow assert False in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# =============================================================================
# Mypy — Type Checking
# =============================================================================

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# =============================================================================
# Pytest — Test Configuration (supplements pytest.ini)
# =============================================================================

[tool.pytest.ini_options]
# Main config is in pytest.ini; this section is for tools that read pyproject.toml
testpaths = ["tests"]
python_files = ["check_*.py", "test_*.py"]
python_functions = ["check_*", "test_*"]

# =============================================================================
# Coverage — pytest-cov Configuration
# =============================================================================

[tool.coverage.run]
source = ["framework"]
omit = [
    "framework/__pycache__/*",
    "framework/integrations/*",  # placeholder modules
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
]
